syntax = "proto3";
package io.elkia.fleet.v1alpha1;

option go_package = "elkia-api-go/pkg/fleet/v1alpha1";

message Member {
  string id = 1;
  uint32 world_id = 2;
  uint32 channel_id = 3;
  string name = 4;
  string address = 5;
  uint32 population = 6;
  uint32 capacity = 7;
}

message MemberAddRequest {
  string id = 1;
  uint32 world_id = 2;
  uint32 channel_id = 3;
  string name = 4;
  string address = 5;
  uint32 population = 6;
  uint32 capacity = 7;
}

message MemberAddResponse {}

message MemberRemoveRequest { string id = 1; }

message MemberRemoveResponse {}

message MemberUpdateRequest {
  string id = 1;
  optional uint32 world_id = 2;
  optional uint32 channel_id = 3;
  optional string name = 4;
  optional string address = 5;
  optional uint32 population = 6;
  optional uint32 capacity = 7;
}

message MemberUpdateResponse {}

message MemberListRequest {}

message MemberListResponse { repeated Member members = 1; }

service Cluster {
  // MemberAdd adds a member into the cluster.
  rpc MemberAdd(MemberAddRequest) returns (MemberAddResponse);

  // MemberRemove removes an existing member from the cluster.
  rpc MemberRemove(MemberRemoveRequest) returns (MemberRemoveResponse);

  // MemberUpdate updates the member configuration.
  rpc MemberUpdate(MemberUpdateRequest) returns (MemberUpdateResponse);

  // MemberList lists all the members in the cluster.
  rpc MemberList(MemberListRequest) returns (MemberListResponse);
}

message AuthLoginRequest {
  string identifier = 1;
  string password = 2;
}

message AuthLoginResponse { uint32 code = 1; }

message AuthRefreshLoginRequest {
  string identifier = 1;
  string password = 2;
  string token = 3;
}

message AuthRefreshLoginResponse { uint32 code = 1; }

message AuthHandoffRequest {
  uint32 code = 1;
  string identifier = 2;
  string password = 3;
}

message AuthHandoffResponse {}

message AuthLogoutRequest { uint32 code = 1; }

message AuthLogoutResponse {}

message Session {
  string id = 1;
  string token = 2;
}

message SessionGetRequest { uint32 code = 1; }

message SessionGetResponse { Session session = 1; }

message SessionPutRequest { Session session = 1; }

message SessionPutResponse { uint32 code = 1; }

message SessionDeleteRequest { uint32 code = 1; }

message SessionDeleteResponse {}

service Presence {
  // Audthenticate authenticates a session with a given identifier and token.
  rpc AuthLogin(AuthLoginRequest) returns (AuthLoginResponse);

  // AuthRefreshLogin authenticates a gateway with a given identifier and
  // token.
  rpc AuthRefreshLogin(AuthRefreshLoginRequest)
      returns (AuthRefreshLoginResponse);

  // AuthHandoff hands off a session to a gateway with a given token and
  // code.
  rpc AuthHandoff(AuthHandoffRequest) returns (AuthHandoffResponse);

  // AuthLogout logs out a session with a given code.
  rpc AuthLogout(AuthLogoutRequest) returns (AuthLogoutResponse);

  // SessionGet gets a session with a given code.
  rpc SessionGet(SessionGetRequest) returns (SessionGetResponse);

  // SessionPut creates a session with a given identifier and token.
  rpc SessionPut(SessionPutRequest) returns (SessionPutResponse);

  // SessionDelete Deletes a session with a given code.
  rpc SessionDelete(SessionDeleteRequest) returns (SessionDeleteResponse);
}
